# agmk

./: .gitignore  BACKEND.md  docker-compose.yml  package-lock.json  package.json
agmk-backend/: .env  package-lock.json  package.json  server.js
agmk-backend/src/: app.js
api/: announcements.ts  auth.ts  employees.ts  foodVouchers.ts  ihp.ts  kindergartens.ts  salary.ts  sanatoriums.ts  support.ts
app/: globals.css  layout.tsx
app/(dashboard)/: layout.tsx
app/about/: page.tsx
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: analytics.py  audit.py  auth.py  briefings.py  departments.py  knowledge_checks.py  notifications.py  professions.py  reports.py  users.py  workers.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: __init__.py  audit_log.py  briefing.py  knowledge_check.py  notification.py  organization.py  user.py  worker.py
backend/app/schemas/: analytics.py  briefing.py  knowledge_check.py  notification.py  organization.py  user.py  worker.py
components/: providers.tsx
components/Header/: header.tsx
components/Sidebar/: Sidebar.tsx
components/calendar/: CalendarCard.tsx  DeadlinesCard.tsx  HolidaysCard.tsx  TodayCard.tsx  WorkScheduleCard.tsx
components/dashboard/: StatsRow.tsx  (+3 more)
frontend/: Dockerfile  package-lock.json  package.json
hooks/: useAnnouncements.ts  useAuth.ts  useIhp.ts  useKindergarten.ts  useLogin.ts  useRegister.ts  useSanatorium.ts  useSendOtp.ts  useSetPassword.ts  useSupport.ts  useVerifyOtp.ts
lib/: axios.ts  queryClient.ts
(+141 files in other folders)
